tests/ui/basic/tuple_list_mismatch.rs
use metamatch::eval;

fn main() {
    eval! {
        let (a, b) = [1, 2, 3];
    };
}
